# Automaton

./: .gitignore  Automaton.cpp  Automaton.h  CMakeLists.txt  Node.cpp  Node.h
src/: Automaton.cpp  Automaton.h  Node.cpp  Node.h
test/: AutomatonTest.cpp  AutomatonTest.h  NodeTest.cpp  NodeTest.h  main.cpp
